add user and client function
