# src/routes/mqttclient.ts
@@ -1,8 +1,10 @@
 import { Router } from "express";
-import { RegisterClient } from "../controller/mqttclient.controller";
+import { GetClientStatusByUser, RegisterClient } from "../controller/mqttclient.controller";
+import RequireAuth from "../middleware/requireAuth";
 
 const router = Router();
 
-router.post("/register_client", RegisterClient);
+router.post("/register_client", RequireAuth, RegisterClient);
+router.get("/client_status", RequireAuth, GetClientStatusByUser);
 
 export default router;
